# eimu_serial_cpp

./: .gitignore  BUILD.md  CMakeLists.txt  README.md
cmake/: eimu_serialConfig.cmake.in
debian/: changelog  control
include/: eimu.hpp
include/eimu_serial/: eimu_serial.hpp
src/: read_imu.cpp
